# ntpg

./: .gitignore  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  index.html  ntpg.desktop
src/: Makefile.am  Makefile.in  conf_view.cc  conf_view.h  main.cc  ntp_interface.cc  ntp_interface.h  parse.cc  parse.h  peers.cc  peers.h  statistics.cc  statistics.h  summary.cc  summary.h  ui.cc  ui.h  util.cc  util.h
